# proxmox-api

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yaml
ci/: assert-empty-git-diff.sh  check-package-versions.sh  dump-schema.pl  dumped-host.json  dumped.json  get-metadata.sh  list-pve-packages.sh  setup.sh
generator/: BROKEN.md  Cargo.toml  PVE-schema.json.xz  download-schema.sh  generate.sh
generator/src/: lib.rs  main.rs  name_utils.rs  path.rs  tracker.rs
generator/src/generator/: enum_def.rs  field_def.rs  file.rs  mod.rs  mod_defs.rs  num_items_def.rs  struct_def.rs  type_def.rs
generator/src/parser/: api.rs
generator/src/raw/: flattened.rs  format.rs  info.rs  items.rs  mod.rs  output.rs  parameters.rs  permission.rs  ty.rs  validator.rs
proxmox-api/: .gitignore  Cargo.toml
proxmox-api-encode/: Cargo.toml
proxmox-api-encode/src/: error.rs  lib.rs  test.rs
proxmox-api-encode/src/de/: inner.rs  mod.rs
proxmox-api-encode/src/ser/: inner.rs  mod.rs
proxmox-api/src/: api2.rs  client.rs  generated.rs  lib.rs  path.rs  proxmox_client.rs  reqwest_client.rs  specialized.rs
proxmox-api/src/cli/: main.rs
proxmox-api/src/clients/: base_access.rs  mod.rs  reqwest.rs  ureq.rs
proxmox-api/src/types/: bool.rs  bounded_integer.rs  bounded_number.rs  bounded_string.rs  formatted_string.rs  integer.rs  list.rs  mac_addr.rs  mod.rs  multi.rs  non_zero_pos_integer.rs  number.rs  unsigned_integer.rs  vmid.rs
schema-generator/: .gitignore  Cargo.toml  PVE-schema.json  output.rs
schema-generator/src/: lib.rs  main.rs  path.rs  struct_def.rs
schema-generator/src/generator/: def.rs  enum_def.rs  field_def.rs  mod.rs  mod_def.rs  struct_def.rs  type_def.rs
schema-generator/src/parsed/: info.rs  mod.rs  parameters.rs  parser.rs  property.rs  returns.rs  type.rs
schema-generator/src/raw/: def.rs  flattened.rs  format.rs  info.rs  items.rs  mod.rs  parameters.rs  permission.rs  property.rs  returns.rs  ty.rs
src/: client.rs  data.json  generated.rs  lib.rs  main.rs  path.rs  serde.rs  vmid.rs
src/api2/: access.rs  cluster.rs  mod.rs  pools.rs  types.rs
src/api2/nodes/: mod.rs
src/api2/nodes/lxc/: clone.rs  config.rs  create.rs  interfaces.rs  mod.rs  status.rs
src/client/: mod.rs  nodes.rs  test.rs
