[package]
name = "proxmox-api"
version = "0.1.0"
edition = "2021"

[features]
default = [ "access", "cluster", "nodes", "pools", "storage", "version" ]
access = []
cluster = []
nodes = []
pools = []
storage = []
version = []

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
log = "0.4.21"
parking_lot = "0.12.1"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
