[package]
name = "generator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive", "std", "help", "color", "usage"], default-features = false }
env_logger = { version = "0.11.10", default-features = false, features = ["auto-color", "humantime"] }
log = { version = "0.4.29", default-features = false, features = ["std"] }
parking_lot = "0.12.5"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { version = "1.0.228", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
syn = "2.0.117"
