[package]
name = "proxmox-api-encode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
percent-encoding = "2.3.1"

[dev-dependencies]
serde_derive = "1"
serde_with={ version = "3.8.1"}