[package]
name = "proxmox-api"
description = "Rust bindings for the Proxmox VE HTTP API"
categories = [ "virtualization", "api-bindings" ]
keywords = [ "proxmox", "proxmoxve" ]
version = "0.1.2-pre"
edition = "2021"
authors = [ "Johannes Cornelis Draaijer <jcdra1@gmail.com>" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/datdenkikniet/proxmox-api"
documentation = "https://docs.rs/proxmox-api/"

[package.metadata.proxmox]
debian-distro = "bookworm"
pve-version = "8.4.17"

[[package.metadata.proxmox.packages]]
libpve-access-control = "8.2.2"
libpve-apiclient-perl = "3.3.2"
libpve-cluster-api-perl = "8.1.2"
libpve-cluster-perl = "8.1.2"
libpve-common-perl = "8.3.7"
libpve-guest-common-perl = "5.2.2"
libpve-http-server-perl = "5.2.2"
libpve-network-perl = "0.11.3"
libpve-notify-perl = "8.1.2"
libpve-rs-perl = "0.9.4"
libpve-storage-perl = "8.3.7"
libpve-u2f-server-perl = "1.2.0"
pve-cluster = "8.1.2"
pve-container = "5.3.3"
pve-docs = "8.4.1"
pve-edk2-firmware-legacy = "4.2025.02-4~bpo12+1"
pve-edk2-firmware-ovmf = "4.2025.02-4~bpo12+1"
pve-esxi-import-tools = "0.7.4"
pve-firewall = "5.1.2"
pve-firmware = "3.16-3"
pve-ha-manager = "4.0.7"
pve-i18n = "3.4.5"
pve-lxc-syscalld = "1.3.0"
pve-manager = "8.4.17"
pve-qemu-kvm = "9.2.0-7"
pve-xtermjs = "5.5.0-2"
qemu-server = "8.4.5"

[features]
default = [ "access", "cluster", "nodes", "pools", "storage", "version" ]
access = []
cluster = []
nodes = []
pools = []
storage = []
version = []
reqwest-client = [ "dep:reqwest", "dep:log", "dep:parking_lot", "dep:serde_urlencoded" ]
ureq-client = [ "dep:ureq", "dep:parking_lot", "dep:serde_urlencoded", "dep:log", "dep:rustls" ]
cli = [ "dep:clap", "dep:pretty_env_logger", "reqwest-client" ]

[[bin]]
name = "proxmox-api"
path = "./src/cli/main.rs"
required-features = [ "cli" ]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

# TODO: add a generic catch-all type to the client trait. This way we can
# make serde_json optional, too!
serde_json = "1.0.114"

# CLI deps
ureq = {  optional = true, version = "2.10.1"}
serde_urlencoded = { optional = true, version = "0.7.1" }
log = { optional = true, version = "0.4.21" }
parking_lot = { optional = true, version = "0.12.1" }
reqwest = { optional = true, version = "0.12.1", features = ["blocking", "json"] }
clap = { optional = true, version = "4.5.3", features = ["derive", "env"] }
pretty_env_logger = { optional = true, version = "0.5.0" }
rustls = { optional = true, version = "0.23.16", default-features = false, features = ["ring"] }
