[package]
name = "proxmox-api"
description = "Rust bindings for the Proxmox VE HTTP API"
categories = [ "virtualization", "api-bindings" ]
keywords = [ "proxmox", "proxmoxve" ]
version = "0.1.2-pre"
edition = "2024"
authors = [ "Johannes Cornelis Draaijer <jcdra1@gmail.com>" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/datdenkikniet/proxmox-api"
documentation = "https://docs.rs/proxmox-api/"

[package.metadata.proxmox]
debian-distro = "bookworm"
pve-version = "9.1.2"

[features]
default = [ "access", "cluster", "nodes", "pools", "storage", "version" ]
access = []
cluster = []
nodes = []
pools = []
storage = []
version = []
reqwest-client = [ "dep:reqwest", "dep:log", "dep:parking_lot", "dep:serde_urlencoded" ]
ureq-client = [ "dep:ureq", "dep:parking_lot", "dep:serde_urlencoded", "dep:log", "dep:rustls" ]
cli = [ "dep:clap", "dep:pretty_env_logger", "reqwest-client" ]

[[bin]]
name = "proxmox-api"
path = "./src/cli/main.rs"
required-features = [ "cli" ]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

# TODO: add a generic catch-all type to the client trait. This way we can
# make serde_json optional, too!
serde_json = "1.0.149"

# CLI deps
ureq = {  optional = true, version = "2.12.1"}
serde_urlencoded = { optional = true, version = "0.7.1" }
log = { optional = true, version = "0.4.29" }
parking_lot = { optional = true, version = "0.12.5" }
reqwest = { optional = true, version = "0.13", features = ["blocking", "json", "query"] }
clap = { optional = true, version = "4.6.0", features = ["derive", "env"] }
pretty_env_logger = { optional = true, version = "0.5.0" }
rustls = { optional = true, version = "0.23.37", default-features = false, features = ["ring"] }
regex = "1.12.3"
